--- a/Code1 - CountVec Pre-process.ipynb
+++ b/Code1 - CountVec Pre-process.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -28,17 +35,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
-<<<<<<< Updated upstream
-    "import pickle\n",
-    "from collections import defaultdict\n",
-=======
     "#import pickle\n",
     "import scipy\n",
     "#from xgboost import XGBClassifier\n",
     "from collections import defaultdict\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
->>>>>>> Stashed changes
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
@@ -46,8 +48,6 @@
    ]
   },
   {
-<<<<<<< Updated upstream
-=======
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -62,7 +62,6 @@
    ]
   },
   {
->>>>>>> Stashed changes
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -70,66 +69,49 @@
    "source": [
     "# Count Vectoriser process\n",
     "\n",
-    "n_vocab = pickle.load(open(\"ML2_data/recipe_text_features_countvec/train_name_countvectorizer.pkl\", \"rb\"))\n",
-    "n_vocab_dict = n_vocab.vocabulary_\n",
-    "\n",
-    "s_vocab = pickle.load(open(\"ML2_data/recipe_text_features_countvec/train_steps_countvectorizer.pkl\", \"rb\"))\n",
-    "s_vocab_dict = s_vocab.vocabulary_\n",
-    "\n",
-    "i_vocab = pickle.load(open(\"ML2_data/recipe_text_features_countvec/train_ingr_countvectorizer.pkl\", \"rb\"))\n",
-    "i_vocab_dict = i_vocab.vocabulary_\n",
-    "\n",
-    "train = pd.read_csv('ML2_data/recipe_train.csv')\n",
-    "\n",
-    "X_train_raw = train.iloc[:,:-1]\n",
-    "y_train = train.iloc[:,-1]\n",
-    "\n",
-    "X_test_raw = pd.read_csv('ML2_data/recipe_test.csv')\n"
+    "count_vec_name = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_name_vec.npz\").toarray()\n",
+    "count_vec_steps = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_steps_vec.npz\").toarray()\n",
+    "count_vec_ingr = scipy.sparse.load_npz(\"ML2_data/recipe_text_features_countvec/train_ingr_vec.npz\").toarray()"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": null,
-=======
    "execution_count": 38,
->>>>>>> Stashed changes
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 3,
-=======
-   "execution_count": 39,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fit countvec/doc2vec features onto text feature columns\n",
-    "#TODO: try doc2vec as well and compare performance\n",
+    "# Doc2vec process\n",
     "\n",
-    "Xtrain_names = list(X_train_raw['name'])\n",
-    "Xtrain_ingredients = list(X_train_raw['ingredients'])\n",
-    "Xtrain_steps = list(X_train_raw['steps'])\n",
+    "doc2vec100_name = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_name_doc2vec100.csv\", header = None).values\n",
+    "doc2vec100_steps = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_steps_doc2vec100.csv\", header = None).values\n",
+    "doc2vec100_ingr = pd.read_csv(\"ML2_data/recipe_text_features_doc2vec100/train_ingr_doc2vec100.csv\", header = None).values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract data from recipe csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Isolate duration label\n",
+    "csv_data = pd.read_csv(\"ML2_data/recipe_train.csv\")\n",
     "\n",
-    "Xtest_names = list(X_test_raw['name'])\n",
-    "Xtest_steps = list(X_test_raw['steps'])\n",
-    "Xtest_ingredients = list(X_test_raw['ingredients'])\n",
+    "n_steps = csv_data.iloc[:,1]\n",
+    "n_steps = n_steps.values\n",
     "\n",
-    "#transforms each countvec into a dense matrix containing corresponding text features\n",
-    "Xtrain_names =  n_vocab.fit_transform(Xtrain_names).todense()\n",
-    "Xtest_names = n_vocab.transform(Xtest_names).todense()\n",
+    "n_ingr = csv_data.iloc[:,2]\n",
+    "n_ingr = n_ingr.values\n",
     "\n",
-<<<<<<< Updated upstream
-    "Xtrain_steps =  s_vocab.fit_transform(Xtrain_steps).todense()\n",
-    "Xtest_steps = s_vocab.transform(Xtest_steps).todense()\n",
+    "duration_array = csv_data.iloc[:,-1]\n",
+    "duration_array = duration_array.values\n",
     "\n",
-    "Xtrain_ingredients =  i_vocab.fit_transform(Xtrain_ingredients).todense()\n",
-    "Xtest_ingredients = i_vocab.transform(Xtest_ingredients).todense()"
-=======
     "n_steps_array = []\n",
     "n_ingr_array = []\n",
     "for i in range(len(n_steps)):\n",
@@ -144,183 +126,19 @@
    "outputs": [],
    "source": [
     "train_data = np.hstack([n_steps_array, n_ingr_array, doc2vec100_steps, count_vec_name, count_vec_ingr])"
->>>>>>> Stashed changes
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Switch columns with CountVec/Word2Vec fitted values\n",
-    "\n",
-    "Xtrain = X_train_raw\n",
-    "Xtest = X_test_raw\n",
-    "\n",
-    "Xtrain['name'] = Xtrain_names\n",
-    "Xtrain['steps'] = Xtrain_steps\n",
-    "Xtrain['ingredients'] = Xtrain_ingredients\n",
-    "\n",
-    "Xtest['name'] = Xtest_names\n",
-    "Xtest['steps'] = Xtest_steps\n",
-    "Xtest['ingredients'] = Xtest_ingredients"
-=======
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(train_data, duration_array, test_size=0.25, random_state=42, stratify=duration_array)"
->>>>>>> Stashed changes
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>n_steps</th>\n",
-       "      <th>n_ingredients</th>\n",
-       "      <th>steps</th>\n",
-       "      <th>ingredients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   name  n_steps  n_ingredients  steps  ingredients\n",
-       "0     0        6             12      0            0\n",
-       "1     0        9              5      0            0\n",
-       "2     0       15             10      0            0\n",
-       "3     0       10              8      0            0\n",
-       "4     0        6              5      0            0\n",
-       "5     0       13             10      0            0\n",
-       "6     0       10              9      0            0\n",
-       "7     0       24              9      0            0\n",
-       "8     0        4              8      0            0\n",
-       "9     0        7              4      0            0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -393,7 +211,6 @@
      ]
     }
    ],
->>>>>>> Stashed changes
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -425,22 +242,17 @@
     "          'Decision Tree',\n",
     "         'Linear SVC']\n",
     "\n",
-    "for title, model in zip(titles, models):\n",
+    "# for title, model in zip(titles, models):\n",
     "    \n",
-    "    output = []\n",
-    "    model.fit(Xtrain, y_train)\n",
-    "    y_predict = model.predict(Xtest)\n",
+    "#     output = []\n",
+    "#     model.fit(X_train, y_train)\n",
+    "#     y_predict = model.predict(X_test)\n",
     "    \n",
-    "    for i in range(len(y_predict)):\n",
-    "        row = [i+1, y_predict[i]]\n",
-    "        output.append(row)\n",
+    "#     for i in range(len(y_predict)):\n",
+    "#         row = [i+1, y_predict[i]]\n",
+    "#         output.append(row)\n",
     "    \n",
     "    \n",
-<<<<<<< Updated upstream
-    "    output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
-    "    output.to_csv(title + '_CV.csv', index = False)\n",
-    "    \n"
-=======
     "#      output = pd.DataFrame(output, columns = ['id', 'duration_label'])\n",
     "#      output.to_csv(title + '_CV.csv', index = False)\n",
     "\n",
@@ -453,17 +265,23 @@
     "\n",
     "    print(\"Time elapsed: \", t_end - t_start)\n",
     "\n"
->>>>>>> Stashed changes
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-<<<<<<< Updated upstream
-   "source": []
-=======
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20:46:22] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.4.0/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "XGB accuracy:  0.8038\n",
+      "Time elapsed:  201.57535600662231\n"
+     ]
+    }
+   ],
    "source": [
     "#XGBoost algo\n",
     "t_start = time.time()\n",
@@ -472,7 +290,6 @@
     "t_end = time.time()\n",
     "print(\"Time elapsed: \", t_end - t_start)"
    ]
->>>>>>> Stashed changes
   },
   {
    "cell_type": "code",
@@ -552,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
